# dhairya

./: .env.example  .gitignore  Makefile  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: main.py  models.py
backend/routes/: community.py  json_stories.py  sessions.py  stories.py
docs/: ARCHITECTURE.md  ETHICS.md
public/: app.jsx  index.html  styles.css
stories/: LANDING_PAGE_UPDATE_INSTRUCTIONS.md  STORY_PLAN.md  dhairya_27_stories_data.json
stories/celebrities/: celeb_01_shivarajkumar.md  celeb_02_yuvraj.md  celeb_03_sonali.md  celeb_04_manisha.md  celeb_05_gautami.md
stories/survivors/: story_01_meena.md  story_02_raju.md  story_03_priya.md  story_04_shankarappa.md  story_05_lakshmi.md  story_06_arun.md  story_07_saraswati.md  story_08_vinay.md  story_09_fatima.md  story_10_mahesh.md
voice-agent/: agent.py  config.py  generate_audio.py  generate_audio_json.py  prompts.py  story_engine.py
