[project]
name = "dhairya"
version = "2.0.0"
requires-python = ">=3.9"
dependencies = [
    "sarvamai>=0.1.21",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]

[tool.vercel.scripts]
build = "mkdir -p public/audio/survivors public/audio/celebrities && cp stories/audio/survivors/*.wav public/audio/survivors/ && cp stories/audio/celebrities/*.wav public/audio/celebrities/"
